[gd_scene load_steps=18 format=3 uid="uid://bqacurjfbfx4i"]

[ext_resource type="Script" path="res://scripts/ui/store.gd" id="1_5balh"]
[ext_resource type="Texture2D" uid="uid://bmi43rcqr6hb5" path="res://sprites/tela de compra/store-bg.webp" id="1_kor1q"]
[ext_resource type="Texture2D" uid="uid://cule5aninb5qn" path="res://sprites/tela de compra/boots.webp" id="3_qxohv"]
[ext_resource type="Theme" uid="uid://cjoyqre1lp47" path="res://assets/themes/buttons.tres" id="3_ygbah"]
[ext_resource type="Texture2D" uid="uid://cfudvdex267jh" path="res://sprites/ui/hud/sugar-life.png" id="4_6od6f"]
[ext_resource type="Texture2D" uid="uid://dfwxwt2n6cdn5" path="res://sprites/tela de compra/lollipop.webp" id="4_fd23s"]
[ext_resource type="Texture2D" uid="uid://cbvmmnkibdiru" path="res://sprites/tela de compra/merchant.webp" id="5_75dkc"]
[ext_resource type="Texture2D" uid="uid://d37cmx7mqjvxh" path="res://sprites/ui/menu/back.webp" id="6_wueqx"]
[ext_resource type="Texture2D" uid="uid://684pdxe3od0q" path="res://assets/dialog/dialog_bubble1-removebg-preview.png" id="8_drcrs"]
[ext_resource type="FontFile" uid="uid://l2iyicn4hyea" path="res://assets/font/thaleah_fat.ttf" id="9_n6f5u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qe7nn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83imk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j580e"]

[sub_resource type="Animation" id="Animation_m30f7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1000)]
}

[sub_resource type="Animation" id="Animation_ipbud"]
resource_name = "transIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1000), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lsi0c"]
resource_name = "transOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vl6c"]
_data = {
"RESET": SubResource("Animation_m30f7"),
"transIn": SubResource("Animation_ipbud"),
"transOut": SubResource("Animation_lsi0c")
}

[node name="store" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -1000)
transform = Transform2D(1, 0, 0, 1, 0, -1000)
script = ExtResource("1_5balh")

[node name="Panel" type="Panel" parent="."]
offset_left = 86.0
offset_top = 81.0
offset_right = 974.0
offset_bottom = 557.0

[node name="textue" type="Sprite2D" parent="Panel"]
position = Vector2(448.5, 238.5)
scale = Vector2(1.10357, 0.978846)
texture = ExtResource("1_kor1q")

[node name="item1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 131.0
offset_top = 169.0
offset_right = 166.0
offset_bottom = 215.0
scale = Vector2(4.47436, 3.07292)
theme = ExtResource("3_ygbah")
icon = ExtResource("4_fd23s")
icon_alignment = 1
expand_icon = true

[node name="item2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 373.0
offset_top = 164.0
offset_right = 399.0
offset_bottom = 197.0
scale = Vector2(5.83833, 4.42122)
theme = ExtResource("3_ygbah")
icon = ExtResource("3_qxohv")
icon_alignment = 1
expand_icon = true

[node name="item3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 610.0
offset_top = 166.0
offset_right = 632.0
offset_bottom = 200.0
scale = Vector2(7.38446, 4.19544)
theme = ExtResource("3_ygbah")
icon = ExtResource("4_6od6f")
icon_alignment = 1
expand_icon = true

[node name="exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 446.0
offset_right = 140.0
offset_bottom = 478.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_qe7nn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_83imk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j580e")
icon = ExtResource("6_wueqx")

[node name="item1Price" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 169.0
offset_top = 334.0
offset_right = 275.0
offset_bottom = 362.0
theme_override_fonts/normal_font = ExtResource("9_n6f5u")
theme_override_font_sizes/normal_font_size = 30
text = "10
"

[node name="item2Price" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 411.0
offset_top = 333.0
offset_right = 517.0
offset_bottom = 361.0
theme_override_fonts/normal_font = ExtResource("9_n6f5u")
theme_override_font_sizes/normal_font_size = 30
text = "5"

[node name="item3Price" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 652.0
offset_top = 334.0
offset_right = 758.0
offset_bottom = 362.0
theme_override_fonts/normal_font = ExtResource("9_n6f5u")
theme_override_font_sizes/normal_font_size = 30
text = "15
"

[node name="merchant" type="Sprite2D" parent="Panel"]
position = Vector2(853, 420)
scale = Vector2(3.18889, 3.5)
texture = ExtResource("5_75dkc")

[node name="moneyLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 165.0
offset_top = 37.0
offset_right = 251.0
offset_bottom = 73.0
theme_override_fonts/normal_font = ExtResource("9_n6f5u")
theme_override_font_sizes/normal_font_size = 30
text = "0"

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3vl6c")
}

[node name="dialogBox" type="Sprite2D" parent="."]
position = Vector2(781, 507)
texture = ExtResource("8_drcrs")
flip_h = true

[node name="label" type="RichTextLabel" parent="dialogBox"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -131.5
offset_right = -45.5
offset_bottom = -107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_n6f5u")
theme_override_font_sizes/normal_font_size = 13
text = "Ol√°, bem-vindo a loja!"
tab_size = 1
context_menu_enabled = true
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="Panel/item1" to="." method="_on_item_1_mouse_entered"]
[connection signal="mouse_exited" from="Panel/item1" to="." method="_on_item_1_mouse_exited"]
[connection signal="pressed" from="Panel/item1" to="." method="_on_item_1_pressed"]
[connection signal="mouse_entered" from="Panel/item2" to="." method="_on_item_2_mouse_entered"]
[connection signal="mouse_exited" from="Panel/item2" to="." method="_on_item_2_mouse_exited"]
[connection signal="pressed" from="Panel/item2" to="." method="_on_item_2_pressed"]
[connection signal="mouse_entered" from="Panel/item3" to="." method="_on_item_3_mouse_entered"]
[connection signal="mouse_exited" from="Panel/item3" to="." method="_on_item_3_mouse_exited"]
[connection signal="pressed" from="Panel/item3" to="." method="_on_item_3_pressed"]
[connection signal="pressed" from="Panel/exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
